syntax = "proto3";

package detrix.v1;

import "common.proto";

// ============================================================
// STREAMING SERVICE - Event Streaming and Queries
// ============================================================

service StreamingService {
  // Stream metric events in real-time
  rpc StreamMetrics(StreamRequest) returns (stream MetricEvent);
  rpc StreamGroup(GroupStreamRequest) returns (stream MetricEvent);
  rpc StreamAll(StreamAllRequest) returns (stream MetricEvent);

  // Query historical data
  rpc QueryMetrics(QueryRequest) returns (QueryResponse);
  rpc GetMetricValue(GetValueRequest) returns (MetricValue);
}

// ============================================================
// STREAMING REQUEST MESSAGES
// ============================================================

message StreamRequest {
  repeated uint64 metric_ids = 1;
  optional string name_pattern = 2;
  RequestMetadata metadata = 3;
}

message GroupStreamRequest {
  string group_name = 1;
  RequestMetadata metadata = 2;
}

message StreamAllRequest {
  optional string thread_filter = 1;
  RequestMetadata metadata = 2;
}

// ============================================================
// EVENT MESSAGE
// ============================================================

// A single expression's evaluated value
message ExpressionValue {
  string expression = 1;
  string value_json = 2;
  oneof typed_value {
    double numeric_value = 3;
    string string_value = 4;
    bool bool_value = 5;
  }
}

message MetricEvent {
  uint64 metric_id = 1;
  string metric_name = 2;
  Location location = 3;
  int64 timestamp = 4;

  // Thread info
  optional string thread_name = 5;
  optional int64 thread_id = 6;

  // Tracing
  optional string request_id = 7;
  optional string session_id = 8;  // For grouping related events

  // Result: multiple expression values or error
  repeated ExpressionValue values = 9;
  optional ErrorResult error = 10;

  // Connection that produced this event
  string connection_id = 11;

  // Introspection data (optional)
  optional StackTrace stack_trace = 12;
  optional MemorySnapshot memory_snapshot = 13;
}

// Stack trace captured at metric evaluation
message StackTrace {
  repeated StackFrame frames = 1;
}

message StackFrame {
  uint32 index = 1;
  string name = 2;
  optional string file = 3;
  optional uint32 line = 4;
  optional string module = 5;
}

// Memory snapshot (local/global variables)
message MemorySnapshot {
  repeated Variable locals = 1;
  repeated Variable globals = 2;
}

message Variable {
  string name = 1;
  string value = 2;
  string type = 3;
}

message ErrorResult {
  bool error = 1;
  string error_code = 2;
  string error_type = 3;
  string error_message = 4;
  optional string traceback = 5;
}

// ============================================================
// QUERY MESSAGES
// ============================================================

message QueryRequest {
  repeated uint64 metric_ids = 1;
  optional TimeRange time_range = 2;

  // Pagination
  optional uint32 limit = 3;       // Default: 100, Max: 1000
  optional uint32 offset = 4;
  optional string cursor = 5;      // Preferred over offset
  optional string order = 6;       // "asc" or "desc"

  RequestMetadata metadata = 7;
}

message TimeRange {
  int64 start = 1;                 // Unix timestamp (microseconds)
  int64 end = 2;
}

message QueryResponse {
  repeated MetricEvent events = 1;
  uint32 total_count = 2;
  bool has_more = 3;
  optional string next_cursor = 4;
  ResponseMetadata metadata = 5;
}

message GetValueRequest {
  uint64 metric_id = 1;
  RequestMetadata metadata = 2;
}

message MetricValue {
  uint64 metric_id = 1;
  string metric_name = 2;
  string value_json = 3;
  int64 timestamp = 4;
  ResponseMetadata metadata = 5;
}
